# dep-crusher

./: Cargo.toml  README.md
src/: dep_node.rs  lib.rs  result.rs  visitor.rs
tests/: file_nodes.rs  virtual_nodes.rs
tests/file/: tools.rs
tests/test_files/: 0  14  3
tests/test_files/a/: 1  2  6
tests/test_files/a/aa/: 5
tests/test_files/a/ab/: 12  8
tests/test_files/b/: 11  4
