[package]
name = "dep_crusher"
version = "0.1.2"
edition = "2021"
authors = ["SpencerLS"]
description = "Starting at a root node, traverse the dependency graph and flatten it."
repository = "https://github.com/Spencer1O1/dep-crusher/"
readme = "README.md"
keywords = ["dependency", "graph", "tree"]
categories = ["algorithms", "data-structures", "rust-patterns"]
license = "MIT OR Apache-2.0"
exclude = ["tests/*"]

[dev-dependencies]
regex = "1.9.1"
same-file = "1.0.6"
